force-app/main/default/objects/Reward__c/fields/Allocation_Period__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Period__c</fullName>
    <formula>IF(NOT(ISBLANK(Posting_Date__c)), TEXT(YEAR( Posting_Date__c ))+&apos;Q&apos;+TEXT(CEILING( MONTH ( Posting_Date__c ) / 3 )), &apos;&apos;)</formula>
    <label>Allocation Period</label>
    <type>Text</type>
</CustomField>