force-app/main/default/objects/Reward__c/fields/COST__c.field-meta.xml
<CustomField>
    <fullName>COST__c</fullName>
    <description>Inherited from Transaction object&apos;s COST</description>
    <label>COST</label>
    <length>100</length>
    <type>Text</type>
</CustomField>