force-app/main/default/objects/Reward__c/fields/Credited_Usage__c.field-meta.xml
<CustomField>
    <fullName>Credited_Usage__c</fullName>
    <label>Credited Usage</label>
    <summarizedField>Reward_Usage__c.Credit_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Reward_Usage__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Credit</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Reward_Usage__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Provisioning</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Reward_Usage__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Rejected</value>
    </summaryFilterItems>
    <summaryForeignKey>Reward_Usage__c.Reward__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>