force-app/main/default/objects/Reward__c/fields/Document__c.field-meta.xml
<CustomField>
    <fullName>Document__c</fullName>
    <description>Inherited from Transaction object&apos;s DOCNUMBER</description>
    <inlineHelpText>Autoline Document Number</inlineHelpText>
    <label>Document</label>
    <length>20</length>
    <type>Text</type>
</CustomField>