force-app/main/default/objects/Reward__c/fields/New_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Expiry_Date__c</fullName>
    <description>New Reward Expiry Date</description>
    <inlineHelpText>New Reward Expiry Date</inlineHelpText>
    <label>New Expiry Date</label>
    <type>Date</type>
</CustomField>