force-app/main/default/objects/Reward__c/fields/NLCODE__c.field-meta.xml
<CustomField>
    <fullName>NLCODE__c</fullName>
    <label>NLCODE</label>
    <length>100</length>
    <type>Text</type>
</CustomField>