force-app/main/default/objects/Reward__c/fields/Posting_Date__c.field-meta.xml
<CustomField>
    <fullName>Posting_Date__c</fullName>
    <description>Inherited from Transaction object&apos;s Posting Date.</description>
    <label>Posting Date</label>
    <type>Date</type>
</CustomField>