force-app/main/default/objects/Reward__c/fields/Redeemed_Credit__c.field-meta.xml
<CustomField>
    <fullName>Redeemed_Credit__c</fullName>
    <label>Redeemed Credit</label>
    <summarizedField>Reward_Usage__c.Credit_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Reward_Usage__c.Status__c</field>
        <operation>equals</operation>
        <value>Utilised</value>
    </summaryFilterItems>
    <summaryForeignKey>Reward_Usage__c.Reward__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>