force-app/main/default/objects/Reward__c/fields/Remainder__c.field-meta.xml
<CustomField>
    <fullName>Remainder__c</fullName>
    <formula>Credit__c - Debited_Usage__c + Credited_Usage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remainder</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>