force-app/main/default/objects/Reward__c/fields/Reward_Profile__c.field-meta.xml
<CustomField>
    <fullName>Reward_Profile__c</fullName>
    <label>Reward Profile</label>
    <referenceTo>Reward_Profile__c</referenceTo>
    <relationshipLabel>Rewards</relationshipLabel>
    <relationshipName>Rewards</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>