force-app/main/default/objects/Reward__c/fields/Vehicle_RegNo__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_RegNo__c</fullName>
    <formula>Registered_Vehicle__r.Registration_Number__c</formula>
    <label>Vehicle RegNo.</label>
    <type>Text</type>
</CustomField>