force-app/main/default/objects/Reward__c/validationRules/Check_Branch.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Branch</fullName>
    <active>true</active>
    <description>Check selected branch is it the same as the vehicle&apos;s branch</description>
    <errorConditionFormula>NOT(
				ISBLANK( TEXT(Branch__c)))
				&amp;&amp; TEXT(Branch__c) &lt;&gt; TEXT(Registered_Vehicle__r.Branch__c
)
&amp;&amp; NOT( $Setup.Bypass_Automation_Settings__c.Bypass_Validation_Rules__c )</errorConditionFormula>
    <errorMessage>Selected branch not match with the vehicle&apos;s branch</errorMessage>
</ValidationRule>