force-app/main/default/objects/Reward__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Reward_Profile__c</columns>
    <columns>Contact__c</columns>
    <columns>Registered_Vehicle__c</columns>
    <columns>Branch__c</columns>
    <columns>Brand__c</columns>
    <columns>Type__c</columns>
    <columns>Credit__c</columns>
    <columns>Debited_Usage__c</columns>
    <columns>Credited_Usage__c</columns>
    <columns>Remainder__c</columns>
    <columns>Expiry__c</columns>
    <columns>COST__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>