force-app/main/default/objects/Reward__c/listViews/Extension_Pending_for_Approval.listView-meta.xml
<ListView>
    <fullName>Extension_Pending_for_Approval</fullName>
    <columns>NAME</columns>
    <columns>Reward_Profile__c</columns>
    <columns>Contact__c</columns>
    <columns>Registered_Vehicle__c</columns>
    <columns>Branch__c</columns>
    <columns>Brand__c</columns>
    <columns>Type__c</columns>
    <columns>Expiry__c</columns>
    <columns>Status__c</columns>
    <columns>Extension_Credit_Amount__c</columns>
    <columns>New_Expiry_Date__c</columns>
    <columns>Extension_Reason__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Provisioning</value>
    </filters>
    <label>Extension Pending for Approval</label>
</ListView>