force-app/main/default/objects/Reward__c/listViews/Rewards_MIT.listView-meta.xml
<ListView>
    <fullName>Rewards_MIT</fullName>
    <columns>NAME</columns>
    <columns>Reward_Profile__c</columns>
    <columns>Contact__c</columns>
    <columns>Registered_Vehicle__c</columns>
    <columns>Branch__c</columns>
    <columns>Brand__c</columns>
    <columns>Type__c</columns>
    <columns>Credit__c</columns>
    <columns>Debited_Usage__c</columns>
    <columns>Credited_Usage__c</columns>
    <columns>Remainder__c</columns>
    <columns>Expiry__c</columns>
    <columns>Status__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Brand__c</field>
        <operation>equals</operation>
        <value>MIT</value>
    </filters>
    <label>Rewards - MIT</label>
</ListView>